stable/omada-controller/0.0.1/templates/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada-controller
  labels:
    app.kubernetes.io/name: omada-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: omada-controller
  template:
    metadata:
      name: omada-controller
      labels:
        app.kubernetes.io/name: omada-controller
      annotations:
        k8s.v1.cni.cncf.io/networks: omada-controller
    spec:
      containers:
        - name: omada-controller
          image: mbentley/omada-controller:5.12
          ports:
            - name: http
              protocol: TCP
              containerPort: 8088
          #    hostPort: 8080
#         #   - protocol: UDP
#         #     containerPort: 1900
#         #     hostPort: 1900
          volumeMounts:
            - name: omada-data
              mountPath: /opt/tplink/EAPController/data
            - name: omada-logs
              mountPath: /opt/tplink/EAPController/logs
      volumes:
        - name: omada-data
          hostPath:
            path: /mnt/pool/service/omada-controller/data
        - name: omada-logs
          hostPath:
            path: /mnt/pool/service/omada-controller/logs
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
#    - port: 1900
#      targetPort: 1900
#      protocol: UDP
#      name: "1900"
  selector:
    app.kubernetes.io/name: omada-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-controller
spec:
  rules:
    - host: omada.bitheap.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada-controller
                port:
                  name: http
